# icypeas

./: Cargo.toml  README.md
src/: grammar.ebnf  main.rs
src/error/: error.rs  mod.rs
src/interpreter/: builtins.rs  enums.rs  environment.rs  interpreter.rs  mod.rs
src/lexer/: enums.rs  lexer.rs  mod.rs
src/model/: expression.rs  expression_kind.rs  located.rs  location.rs  mod.rs  statement.rs  statement_kind.rs  token.rs  token_kind.rs  token_value.rs  value.rs
src/parser/: enums.rs  mod.rs  parser.rs  precedence.rs
tests/: binary_operators.icy  builtins.icy  comments.icy  functions.icy  if_expressions.icy  lambdas.icy  unary_operators.icy  variables.icy
