[package]
name = "icypeas"
version = "0.1.0"
authors = ["eagely"]
edition = "2021"
description = "An interpreter for a functional programming language"
readme = "README.md"
repository = "https://github.com/eagely/icypeas"
license-file = "LICENSE"
keywords = ["icypeas"]
categories = ["compilers"]

[dependencies]
