[package]
name = "icypeas"
version = "0.1.0"
authors = ["eagely"]
edition = "2024"
description = "An interpreter for a functional programming language"
readme = "README.md"
repository = "https://github.com/eagely/icypeas"
license-file = "LICENSE"
keywords = ["icypeas"]
categories = ["compilers"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
